package proto;

import "code.google.com/p/gogoprotobuf/gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.stringer_all) = false;

option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;

message ServerToClient {
	enum StatusCode {
		OK = 0;
		PARSE_ERROR = 1;
	}
	required StatusCode status = 1;
}

message ClientToServer {	
	
	optional bool create_account = 1;
	message DeliverEnvelope {
		required bytes User = 3 [(gogoproto.customtype) = "Byte32"];
		required bytes Envelope = 4;
	}	
	optional DeliverEnvelope deliver_envelope = 2; 
}

